refactor(library): use existsById for content check and Stream.toList() in FavoriteServiceImpl
- Replace inefficient findById().orElseThrow() with existsById() check in add() method to avoid unnecessary object instantiation
- Replace Collectors.toList() with Stream.toList() (Java 16+ terminal operation) for cleaner, more efficient stream API usage
- Update corresponding test mocks to use existsById() instead of findById()

Co-Authored-By: Claude Haiku 4.5 <noreply@anthropic.com>